--- a/.github/workflows/FirebaseAppDistribution.yml
+++ b/.github/workflows/FirebaseAppDistribution.yml
@@ -2,9 +2,11 @@
 name: Build & upload to Firebase App Distribution 
 
 # 해당 브랜치에 push나 pull request가 오는 경우 수행
-on: 
-	push:
-		branches: [ develop ]
+on:
+  push:
+    branches:
+    	- develop
+    
 #	pull_request:
 #		branches: [ develop ]
 
