--- a/.github/workflows/FirebaseAppDistribution.yml
+++ b/.github/workflows/FirebaseAppDistribution.yml
@@ -5,7 +5,8 @@ name: Build & upload to Firebase App Distribution
 on:
   push:
     branches:
-    	- develop
+    	- main
+    	#- develop
     
 #	pull_request:
 #		branches: [ develop ]
