--- a/.github/workflows/FirebaseAppDistribution.yml
+++ b/.github/workflows/FirebaseAppDistribution.yml
@@ -2,10 +2,7 @@
 name: Build & upload to Firebase App Distribution 
 
 # 해당 브랜치에 push나 pull request가 오는 경우 수행
-on:
-  pull_request:
-    branches:
-    	- master
+on: [pull_request]
 
 # on되면 수행하는 행동임.
 jobs:
@@ -13,8 +10,8 @@ jobs:
 # build-iOS라는 잡을 생성함.
    build-iOS:
 
-		# 타켓 OS임.
-    runs-on: macOS-latest # ubuntu-latest
+# 타켓 OS임.
+runs-on: macOS-latest # ubuntu-latest
 
     steps:  
     # build here 
