--- a/Woofriend/Info.plist
+++ b/Woofriend/Info.plist
@@ -51,6 +51,8 @@
 	<string></string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
+		<string>kakaokompassauth</string>
+		<string>kakaolink</string>
 		<string>naversearchapp</string>
 		<string>naversearchthirdlogin</string>
 	</array>
