--- a/Woofriend/GoogleService-Info.plist
+++ b/Woofriend/GoogleService-Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>967308732129-n6tnrc5snhsef93206s0n4suqhia050h.apps.googleusercontent.com</string>
+	<string>847463522510-ajipnbr1opk1i0ugeoo98f4ibq4ktv79.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.967308732129-n6tnrc5snhsef93206s0n4suqhia050h</string>
+	<string>com.googleusercontent.apps.847463522510-ajipnbr1opk1i0ugeoo98f4ibq4ktv79</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAXFsZJbpL_8wMyHxUiUO5HeTfiZ0qJ86A</string>
+	<string>AIzaSyCRrEm9P6Quoa4v20xD4r_WmQxhRD-pTVM</string>
 	<key>GCM_SENDER_ID</key>
-	<string>967308732129</string>
+	<string>847463522510</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.depromeet.woofriend</string>
 	<key>PROJECT_ID</key>
-	<string>woofriend-ios</string>
+	<string>woofriend-55cc9</string>
 	<key>STORAGE_BUCKET</key>
-	<string>woofriend-ios.appspot.com</string>
+	<string>woofriend-55cc9.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,6 +29,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:967308732129:ios:2d61fe2c79d72454a179a0</string>
+	<string>1:847463522510:ios:bec42e688037206026309f</string>
 </dict>
 </plist>
